// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ThemeSwitcher component > restores > dark theme if dark theme is saved in localstorage 1`] = `
"<div>
  <oc-select-stub clearable="false" option-label="name" model-value="[object Object]" options="[object Object],[object Object],[object Object]"></oc-select-stub>
</div>"
`;

exports[`ThemeSwitcher component > restores > light theme if light theme is saved in localstorage 1`] = `
"<div>
  <oc-select-stub model-value="[object Object]" clearable="false" option-label="name" options="[object Object],[object Object],[object Object]"></oc-select-stub>
</div>"
`;
